# recobridge

./: .gitignore  README.md
apps/api/: README.md  pyproject.toml
apps/api/data/: bundle.json
apps/api/migrations/: 001_init.sql
apps/api/recobridge_api/: __init__.py  app.py  benchmark.py  config.py  engine.py  models.py  store.py
apps/api/tests/: test_api.py
apps/ml/: DATASET.md  README.md  preprocessing.ipynb  pyproject.toml  requirements.txt  test.ipynb
apps/ml/recobridge_ml/: __init__.py  export_dataset.py  preprocess.py  promote.py  train.py
apps/ml/recobridge_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/ml/synerise_dataset/: add_to_cart.parquet  page_visit.parquet  product_buy.parquet  product_properties.parquet  remove_from_cart.parquet  search_query.parquet
apps/ml/tests/: test_export_dataset.py  test_train.py
apps/web/: .gitignore  README.md  package-lock.json  package.json
docs/: CHANGELOG.md  README.md  VALIDATION_REPORT.md  manifest.json  project overview.md
docs/.obsidian/: app.json  appearance.json  graph.json  workspace.json
docs/00_GOVERNANCE/: 01_Document_Control.md  02_Assumptions_Decisions_Open_Questions.md  03_Requirement_Traceability_Matrix.md  04_Product_MVP_Baseline.md
docs/01_BUSINESS/: 01_Project_Charter.md  02_Business_Requirements.md  03_Stakeholders_and_Use_Cases.md  04_Scope_KPI_Acceptance.md
docs/02_DATA/: 01_Dataset_Selection_Synerise.md  02_Data_Dictionary_and_Mapping.md  03_Data_Quality_Preprocessing.md  04_Labeling_Sampling_and_Split.md  05_Data_Governance_and_Privacy.md
docs/03_ARCHITECTURE/: 01_System_Architecture.md  02_Data_Flow_and_Sequence_Diagrams.md  03_Integration_Design.md  04_Resilience_Data_Integrity.md  05_Architecture_Decision_Records.md
docs/04_ML/: 01_ML_Problem_and_Strategy.md  (+3 more)
scripts/: smoke-demo.ps1  start-demo.ps1  stop-demo.ps1  update-docs-manifest.ps1
(+34 files in other folders)
