[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "recobridge-api"
version = "0.1.0"
description = "RecoBridge recommendation and event ingestion API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["recobridge_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
