[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "recobridge-ml"
version = "0.1.0"
description = "RecoBridge data preprocessing and ML pipelines"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.4,<2",
  "joblib>=1.4,<2",
  "numpy>=2,<3",
  "pandas>=2.2,<3",
  "pytz>=2025.2",
  "scipy>=1.14,<2",
  "scikit-learn>=1.6,<2",
  "xgboost>=3,<4",
]

[project.scripts]
recobridge-preprocess = "recobridge_ml.preprocess:main"
recobridge-train = "recobridge_ml.train:main"
recobridge-promote = "recobridge_ml.promote:main"
recobridge-export-dataset = "recobridge_ml.export_dataset:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["recobridge_ml*"]
